Added hide directive, working on load. Needs service to update on events

--- a/src/app/tables/dynamic-table-ung/dynamic-table-ung.component.html
+++ b/src/app/tables/dynamic-table-ung/dynamic-table-ung.component.html
@@ -1,4 +1,4 @@
-<p-table [value]="cars">
+<p-table [value]="cars" appDynamicTableUng >
   <ng-template pTemplate="header">
       <tr>
           <th>Vin</th>
